Fix alignment with top bar. Add min-width

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,12 @@ CODE {
 }
 
 ARTICLE{ 
-  padding-top: 70px;
   padding: 80px 20px 20px 20px;
   clear: both;
   margin: 0 auto 50px auto;
   background-image: url('/images/lightpaperfibers.png');
   width: 80%;
-
+  min-width: 700px;
   border-top: none;
   border: thin solid grey;
   color: #600;
@@ -94,6 +93,7 @@ HEADER {
   padding: 10px 5% 10px 5%;
   background-color: #777;
   width: 90%;
+  min-width: 600px;
   z-index: 100000;
 }
 
@@ -103,6 +103,7 @@ HEADER H1 {
 
 NAV {
   float: right;
+
   color: black;
   font-weight: bold;
 }
